--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -701,7 +701,7 @@
     duration: 5
     persistent: false
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: refresh
     destroyable: true
     keepOnSwitchOut: true
@@ -713,7 +713,7 @@
     persistent: false
     maxStacks: 10
     stackable: true
-    stackStrategy: stack
+    stackStrategy: refresh
     destroyable: true
     keepOnSwitchOut: true
   effect:
