--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -121,3 +121,9 @@ mark_xinlingzhiyue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@mai
 mark_jingyangshengxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3190.png'
 mark_zhunbeidongzuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3055.png'
 mark_lingqiao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3056.png'
+mark_maimaijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3061.png'
+mark_jinzhenwayi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3062.png'
+mark_chongzhuangzhenci: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3063.png'
+mark_maidijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3064.png'
+mark_huifu_50_per_turn: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3018.png'
+mark_first_turn_after_switch: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3019.png'
