--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -304,3 +304,17 @@ skill_zuozuozuobaiquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource
 skill_shangshangshanggouquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
 skill_youyouyoubaiquan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
 skill_yili: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_zhenci: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_001.mp3'
+skill_maimaijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_001.mp3'
+skill_bachujinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_1_002.mp3'
+skill_qianyinjinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_002.mp3'
+skill_jinzhenwayi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_3_002.mp3'
+skill_jinzhenlianfa: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_001.mp3'
+skill_zhenjiu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_3_002.mp3'
+skill_zhencichongzhuang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_1_003.mp3'
+skill_juxingjinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_003.mp3'
+skill_jinzhenluanwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10340.mp3'
+skill_zuijiazhugong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_1_003.mp3'
+skill_shouhuijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_1_003.mp3'
+skill_maidijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_003.mp3'
+skill_jinzhenfenmo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_3_002.mp3'
