--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,18 @@
     "editor.inlayHints.maximumLength": 0
   },
   "yaml.schemas": {
-    "schema/mark.schema.json": ["./data/mark.yaml", "./data/mark_*.yaml"],
-    "schema/skill.schema.json": ["./data/skill.yaml", "./data/skill_*.yaml"],
-    "schema/species.schema.json": ["./data/species.yaml", "./data/species_*.yaml"]
+    "schema/mark.schema.json": [
+      "./data/mark.yaml",
+      "./data/mark_*.yaml"
+    ],
+    "schema/skill.schema.json": [
+      "./data/skill.yaml",
+      "./data/skill_*.yaml"
+    ],
+    "schema/species.schema.json": [
+      "./data/species.yaml",
+      "./data/species_*.yaml"
+    ]
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "exportall.config.relExclusion": [
