--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -91,3 +91,7 @@
   config: *ablitity_config
   effect:
     - effect_ability_increase_accuracy_5_percent_if_height_above_100
+- id: mark_ability_liangong
+  config: *ablitity_config
+  effect:
+    - effect_ability_add_shoufashanghaizengjia_on_switch_in
