--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -3868,3 +3868,183 @@
   tags: []
   effect:
     - effect_skill_consume_maidijinzhen_add_jinzhenfenmo
+# 希捷和希捷特的技能
+- id: skill_shanshuo
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stages
+- id: skill_chuantoutuji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  ignoreFoeStageStrategy: positive
+- id: skill_xukongxiji
+  element: Water
+  category: Special
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_has_xukongganying
+- id: skill_chuantounchongji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 35
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: [2, 3]
+  ignoreFoeStageStrategy: all
+- id: skill_xukongzhuanhuan
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_self_negative_stage
+- id: skill_xukongchongneng
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_quarter
+- id: skill_zhixichongfeng
+  element: Water
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_zhixi_10_or_40_percent_if_has_xukongganying
+- id: skill_xukongzhadan
+  element: Water
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_40_or_80_if_has_xukongganying
+- id: skill_chuantounchongfeng
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  ignoreFoeStageStrategy: all
+- id: skill_xukongshanshen
+  element: Water
+  category: Special
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+  effect:
+    - effect_skill_sure_hit_if_has_xukongganying
+- id: skill_xukongdabaozha
+  element: Water
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_15_percent
+- id: skill_xuanwotuxi
+  element: Water
+  category: Special
+  target: opponent
+  power: 85
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_50_if_has_xukongganying
+- id: skill_xuanwochuantou
+  element: Water
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  ignoreFoeStageStrategy: all
+- id: skill_xuanwozhadan
+  element: Water
+  category: Special
+  target: opponent
+  power: 85
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_50_or_100_if_has_xukongganying
+- id: skill_xukongtizhi
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+  effect:
+    - effect_skill_add_mark_shoudaoshanghaijianshao_75
