--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -127,3 +127,6 @@ mark_chongzhuangzhenci: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource
 mark_maidijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3064.png'
 mark_huifu_50_per_turn: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3018.png'
 mark_first_turn_after_switch: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3019.png'
+mark_xukongtizhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3153.png'
+mark_xukongganying: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3154.png'
+mark_shoudaoshanghaijianshao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3041.png'
