--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -318,3 +318,19 @@ skill_zuijiazhugong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@ma
 skill_shouhuijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_1_003.mp3'
 skill_maidijinzhen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_2_003.mp3'
 skill_jinzhenfenmo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/02_3_002.mp3'
+# 希捷和希捷特的技能音效
+skill_shanshuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_002.mp3'
+skill_chuantoutuji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_002.mp3'
+skill_xukongxiji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_chuantounchongji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_002.mp3'
+skill_xukongzhuanhuan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_002.mp3'
+skill_xukongchongneng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_003.mp3'
+skill_zhixichongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_003.mp3'
+skill_xukongzhadan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_002.mp3'
+skill_chuantounchongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_002.mp3'
+skill_xukongshanshen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_001.mp3'
+skill_xukongdabaozha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10904.mp3'
+skill_xuanwotuxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_xuanwochuantou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_003.mp3'
+skill_xuanwozhadan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_002.mp3'
+skill_xukongtizhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
