--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -4430,3 +4430,233 @@
                 value: mark_first_turn_after_switch
         evaluator:
           type: exist
+# 具有虚空感应时威力2倍
+- id: effect_skill_power_2x_if_has_xukongganying
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_xukongganying
+        evaluator:
+          type: exist
+# 解除自身弱化
+- id: effect_skill_clear_self_negative_stage
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: clearStatStage
+    target: self
+    cleanStageStrategy: negative
+  condition:
+    type: selfUseSkill
+# 10%使对手窒息，具有虚空感应时40%使对手窒息
+- id: effect_skill_add_mark_foe_zhixi_10_or_40_percent_if_has_xukongganying
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_zhixi
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: some
+        conditions:
+          - type: every
+            conditions:
+              - type: not
+                condition:
+                  type: evaluate
+                  target:
+                    base: selfMarks
+                    chain:
+                      - type: whereAttr
+                        extractor:
+                          type: base
+                          arg: baseId
+                        evaluator:
+                          type: same
+                          value: mark_xukongganying
+                  evaluator:
+                    type: exist
+              - type: evaluate
+                target: self
+                evaluator:
+                  type: probability
+                  percent: 10
+          - type: every
+            conditions:
+              - type: evaluate
+                target:
+                  base: selfMarks
+                  chain:
+                    - type: whereAttr
+                      extractor:
+                        type: base
+                        arg: baseId
+                      evaluator:
+                        type: same
+                        value: mark_xukongganying
+                evaluator:
+                  type: exist
+              - type: evaluate
+                target: self
+                evaluator:
+                  type: probability
+                  percent: 40
+# 附加40点固伤，具有虚空感应时附加80点固伤
+- id: effect_skill_add_damage_40_or_80_if_has_xukongganying
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta:
+      type: conditional
+      trueValue: 80
+      falseValue: 40
+      condition:
+        type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_xukongganying
+        evaluator:
+          type: exist
+  condition:
+    type: selfUseSkill
+# 具有虚空感应时必中
+- id: effect_skill_sure_hit_if_has_xukongganying
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setSureHit
+    target: usingSkillContext
+    priority: 1
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_xukongganying
+        evaluator:
+          type: exist
+# 15%弱化对手特防1级
+- id: effect_skill_reduce_foe_spd_1_stage_15_percent
+  trigger: OnDamage
+  priority: 0
+  apply:
+    type: statStageBuff
+    target: foe
+    statType: spd
+    value: -1
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent: 15
+# 具有虚空感应时增加50点威力
+- id: effect_skill_add_power_50_if_has_xukongganying
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addPower
+    target: usingSkillContext
+    value: 50
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_xukongganying
+        evaluator:
+          type: exist
+# 附加50点固伤，具有虚空感应时附加100点固伤
+- id: effect_skill_add_damage_50_or_100_if_has_xukongganying
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta:
+      type: conditional
+      trueValue: 100
+      falseValue: 50
+      condition:
+        type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_xukongganying
+        evaluator:
+          type: exist
+  condition:
+    type: selfUseSkill
+# 使自身获得75点受伤减少
+- id: effect_skill_add_mark_shoudaoshanghaijianshao_75
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shoudaoshanghaijianshao
+    stack: 75
+  condition:
+    type: selfUseSkill
